Get rid of need for environment variables
Change-Id: If5320c6828a1c2fa227ffbfc419e6ed4b7d62b54
Signed-off-by: Diego Dompe <dompe@hp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@
 #    License for the specific language governing permissions and limitations
 #    under the License.
 
-cmake_minimum_required (VERSION $ENV{CMAKE_MIN_VERS})
+cmake_minimum_required (VERSION 2.8)
 
 set (UTILS_LIBS halonutils)
 project (${UTILS_LIBS})
