Declare dependencies as required
Change-Id: Ie4ce5ed10329379ac140dc0b5a28a65f05eaab2b
Signed-off-by: Diego Dompe <dompe@hp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set (UTILS_LIBS halonutils)
 project (${UTILS_LIBS})
 
 include(FindPkgConfig)
-pkg_check_modules(SYSTEMD libsystemd)
+pkg_check_modules(SYSTEMD REQUIRED libsystemd)
 
 add_definitions(${SYSTEMD_CFLAGS})
 link_directories(${SYTEMD_LIBRARY_DIRS})
