Added -Wall & -Werror flags & fixed compiler warnings (halonutils).
Change-Id: Ie2afe82336b7fa98fc10c4ff9d1bf47845fab916
Signed-off-by: Sreedhar <sreedharr@hp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,9 @@ add_library (${UTILS_LIBS} SHARED ${SOURCES})
 
 target_link_libraries(${UTILS_LIBS})
 
+# Define compile flags
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -Wall -Werror")
+
 set(H_U_VER_MAJOR "0")
 set(H_U_VER_MINOR "1")
 set(H_U_VER_PATCH "0")
