--- a/src/opsutils.pc.in
+++ b/src/opsutils.pc.in
@@ -19,7 +19,7 @@ libdir=${exec_prefix}/lib
 includedir=${prefix}/include
 
 Name: @CMAKE_PROJECT_NAME@
-Description: Halon utilities
+Description: OpenSwitch utilities
 Version: @OPSUTILS_VERSION@
 Requires: systemd
 Libs: -L${libdir} -lopsutils
