Subject: 2439 - halonutils repo migration - add docs and remove hc-util* files.
Moved the repo docs files from the doc dir to the top dir and removed
the docs dir.

Change-Id: Icf6fd5eea94e197026f0e4dc7ba85482d4f51f4c
Signed-off-by: Gary Evans <gary.evans@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,7 @@ set (INCL_DIR include)
 include(FindPkgConfig)
 
 # Source files to build ops-utils library
-# OPS_TODO: Temp...remove hc-* after all repos updated
-#set (SOURCES ${SRC_DIR}/ops-utils.c)
-set (SOURCES ${SRC_DIR}/ops-utils.c ${SRC_DIR}/hc-utils.c)
+set (SOURCES ${SRC_DIR}/ops-utils.c)
 include_directories (${PROJECT_SOURCE_DIR}/${INCL_DIR})
 
 # Rules to build ops-utils library
@@ -51,9 +49,7 @@ install(TARGETS ${UTILS_LIBS}
         LIBRARY DESTINATION lib
 )
 
-# OPS_TODO: Temp...remove hc-* after all repos updated
-#install(FILES ${INCL_DIR}/ops-utils.h
-install(FILES ${INCL_DIR}/ops-utils.h ${INCL_DIR}/hc-utils.h
+install(FILES ${INCL_DIR}/ops-utils.h
         DESTINATION include)
 
     install(FILES ${CMAKE_BINARY_DIR}/${SRC_DIR}/opsutils.pc DESTINATION lib/pkgconfig)
